lower: implemented RoleMappers, BookMappers, ImageMappers.